--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,12 +28,7 @@ jobs:
         run: gem build rails_db_inspector.gemspec
 
       - name: Push to RubyGems
-        run: |
-          mkdir -p ~/.gem
-          echo "---" > ~/.gem/credentials
-          echo ":rubygems_api_key: ${{ secrets.RUBYGEMS_API_KEY }}" >> ~/.gem/credentials
-          chmod 0600 ~/.gem/credentials
-          gem push rails_db_inspector-*.gem
+        uses: rubygems/release-gem@v1
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
