--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,9 +24,6 @@ jobs:
       - name: Run tests
         run: bundle exec rspec
 
-      - name: Build gem
-        run: gem build rails_db_inspector.gemspec
-
       - name: Push to RubyGems
         uses: rubygems/release-gem@v1
 
@@ -34,4 +31,4 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           generate_release_notes: true
-          files: rails_db_inspector-*.gem
+          files: pkg/rails_db_inspector-*.gem
