--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,10 +19,15 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: '4.0.0'
-          bundler-cache: true
+
+      - name: Install dependencies
+        run: bundle install
 
       - name: Run tests
         run: bundle exec rspec
+
+      - name: Ensure clean working directory
+        run: git checkout -- .
 
       - name: Push to RubyGems
         uses: rubygems/release-gem@v1
